# ML_CI_CD

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  task-definition.json
.github/workflows/: aws-deploy.yml  azure-deploy.yml
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py  logger.py
templates/: home.html
tests/: test_basic.py
