[project]
name = "ml-project"
version = "0.1.0"
description = "Modern ML project for predicting student performance using industry-standard tools and deployment practices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "dill>=0.4.0",
    "fastapi>=0.116.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
]

